Fixed bug in printergrabber where spaces/special chars in filename would break it. Added 64-bit echoprint for laughs.